Recomecar com um clique

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="game-board">
-        <img src="./images/pipe.png" class="pipe" />
-        <img src="./images/clouds.png" class="clouds" />
+        <img src="./images/pipe.png" class="pipe pipe-animation" />
+        <img src="./images/clouds.png" class="clouds clouds-animation" />
         <img src="./images/mario.gif" class="mario" />
     </div>
 </body>
